RESOLVED FIXED194361
Shrink and hyphenate safe browsing warning text on watchOS
https://bugs.webkit.org/show_bug.cgi?id=194361
Summary Shrink and hyphenate safe browsing warning text on watchOS
Alex Christensen
Reported 2019-02-06 14:11:32 PST
Shrink and hyphenate safe browsing warning text on watchOS
Attachments
Patch (2.96 KB, patch)
2019-02-06 14:12 PST, Alex Christensen
no flags
Patch (3.28 KB, patch)
2019-02-06 14:37 PST, Alex Christensen
ggaren: review+
Alex Christensen
Comment 1 2019-02-06 14:12:30 PST
Alex Christensen
Comment 2 2019-02-06 14:12:32 PST
Alex Christensen
Comment 3 2019-02-06 14:37:30 PST
Geoffrey Garen
Comment 4 2019-02-06 15:37:35 PST
Comment on attachment 361330 [details] Patch r=me
Alex Christensen
Comment 5 2019-02-07 10:22:23 PST
Note You need to log in before you can comment on or make changes to this bug.