Cherry-pick r241124. rdar://problem/47466549

Shrink and hyphenate safe browsing warning text on watchOS
    https://bugs.webkit.org/show_bug.cgi?id=194361
    <rdar://problem/47466549>

    Reviewed by Geoffrey Garen.

    Some internationalizations use long words that didn't fit on small watches.

    * UIProcess/Cocoa/WKSafeBrowsingWarning.mm:
    (fontOfSize):
    (-[WKSafeBrowsingWarning addContent]):
    (-[WKSafeBrowsingTextView initWithAttributedString:forWarning:]):

    Canonical link: https://commits.webkit.org/208814@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241124 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/208691.33@safari-608.1.5.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.5.1-branch@241370 268f45cc-cd09-0410-ab3c-d52691b4dbfc