Source/WebKit/UIProcess/Cocoa/WKSafeBrowsingWarning.mm
@@ -37,7 +37,7 @@ constexpr CGFloat exclamationPointSize = 30;
 constexpr CGFloat boxCornerRadius = 6;
 #if HAVE(SAFE_BROWSING)
 #if PLATFORM(WATCHOS)
-constexpr CGFloat marginSize = 10;
+constexpr CGFloat marginSize = 9;
 #else
 constexpr CGFloat marginSize = 20;
 #endif
@@ -88,7 +88,7 @@ static FontType *fontOfSize(WarningTextSize size)
     switch (size) {
     case WarningTextSize::Title:
 #if PLATFORM(WATCHOS)
-        return [UIFont preferredFontForTextStyle:UIFontTextStyleHeadline];
+        return [UIFont preferredFontForTextStyle:UIFontTextStyleSubheadline];
 #else
         return [UIFont preferredFontForTextStyle:UIFontTextStyleLargeTitle];
 #endif
@@ -289,10 +289,16 @@ static void setBackground(ViewType *view, ColorType *color)
     auto title = makeLabel([[[NSAttributedString alloc] initWithString:_warning->title() attributes:@{
         NSFontAttributeName:fontOfSize(WarningTextSize::Title),
         NSForegroundColorAttributeName:colorForItem(WarningItem::TitleText, self)
+#if PLATFORM(WATCHOS)
+        , NSHyphenationFactorDocumentAttribute:@1
+#endif
     }] autorelease]);
     auto warning = makeLabel([[[NSAttributedString alloc] initWithString:_warning->warning() attributes:@{
         NSFontAttributeName:fontOfSize(WarningTextSize::Body),
         NSForegroundColorAttributeName:colorForItem(WarningItem::MessageText, self)
+#if PLATFORM(WATCHOS)
+        , NSHyphenationFactorDocumentAttribute:@1
+#endif
     }] autorelease]);
     auto showDetails = makeButton(WarningItem::ShowDetailsButton, self, @selector(showDetailsClicked));
     auto goBack = makeButton(WarningItem::GoBackButton, self, @selector(goBackClicked));
@@ -368,7 +374,6 @@ static void setBackground(ViewType *view, ColorType *color)
 {
     ViewType *box = _box.get().get();
     ButtonType *showDetails = box.subviews.lastObject;
-    WTFLogAlways("SHOW DETAILS BUTTON? %@", showDetails);
     [showDetails removeFromSuperview];
 
     NSMutableAttributedString *text = [[_warning->details() mutableCopy] autorelease];
@@ -536,6 +541,9 @@ static void setBackground(ViewType *view, ColorType *color)
     self.editable = NO;
 #if !PLATFORM(MAC)
     self.scrollEnabled = NO;
+#endif
+#if PLATFORM(WATCHOS)
+    self.layoutManager.hyphenationFactor = 1;
 #endif
 
     return self;
